# SNS-categorizer

./: .gitignore  pyproject.toml
tests/: data_preprocessing.ipynb  fine_tuning.ipynb
