[project]
name = "sns-category-classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "SOMMHEO",email = "hsm8506@naver.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "transformers (>=4.53.3,<5.0.0)",
    "datasets (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
